# juji-exercise

./: .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml
app/: container.py  main.py
app/shared/dto/: result_dto.py
app/tasks/: task_error_route.py  task_router.py  task_service.py
app/tasks/dto/: create_task_dto.py  task_dto.py  task_resp_dto.py
app/tasks/entities/: task_entity.py
app/tasks/infra/repositories/: in_memory_task_repository.py
app/tasks/repositories/: task_repository.py
tests/tasks/: test_task_router.py
tests/tasks/infra/repository/: test_in_memory_task_repository.py
