[tool.poetry]
name = "juji"
version = "0.1.0"
description = ""
authors = ["Denny Cheng <cdfq152313@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
